--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,16 +1,25 @@
 <div class="container" style="text-align:center">
   <h2>Login to your account</h2>
-  <form>
-    <div class="container">
-      <input type="text" title="username" placeholder="Username" />
-    </div>
+  <div class="container">
+    <form novalidate [formGroup]="loginForm">
+      <div class="container">
+        <label for="password">Virtusa Email <br /></label>
+        <input class="form-control" formControlName="email" id="email" type="text" title="email" placeholder="abc@virtusa.com" />
+      </div>
 
-    <div class="container">
-      <input type="password" title="password" placeholder="Password" />
-    </div>
+      <div class="container">
+        <label for="password">Password <br /></label>
+        <input class="form-control" formControlName="password" id="password" type="password" title="password" placeholder="Password" />
+      </div>
 
-    <div class="container">
-      <button type="submit" class="btn">Login</button>
-    </div>
-  </form>
+      <div class="container">
+        <button type="submit" class="btn" (click)="validateCred()">Login</button>
+      </div>
+    </form>
+  </div>
 </div>
+
+<br>Dirty: {{ loginForm.dirty }}
+<br>Touched: {{ loginForm.touched }}
+<br>Valid: {{ loginForm.valid }}
+<br>Value: {{ loginForm.value | json }}
