--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -1,4 +1,4 @@
-div {
+/* div {
 	padding: 10px 25px;
 	text-align: center;
 }
@@ -12,4 +12,4 @@ input {
   border-radius: 4px;
   background-color: #f8f8f8;
   resize: none;
-}
+} */
