--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,15 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<marquee direction="right" bgcolor="#C0C0C0">
-           OM NAMA SHIVAAYA
-</marquee>
-<div style="text-align:center">
-  <a [routerLink] ="['/welcome']" title="ABOUT NGIF">
+<!-- The content below is only a placeholder and can be replaced. -->
+<!-- <div style="text-align:center">
+  <a [routerLink] ="['/welcome']" title="ABOUT NGIF"></a>
     <h3>WELCOME TO {{ title }}!</h3>
   </a>
+</div> -->
+
+<div style="text-align:center">
+  <h3>WELCOME TO {{ title }}!</h3>
 </div>
+
 
 <div class='container'>
-      <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </div>
-
-<marquee direction="left" bgcolor="#C0C0C0">
-           VIRTUSA CONSULTING SERVICES
-</marquee>
