--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -1,1 +1,9 @@
 <p>user-dashboard works!</p>
+
+<div class="container">
+        <button type="submit" class="btn btn-primary" (click)="validate($event)">Click Me</button>
+    
+        <!-- <a [routerLink] ="['/signup']" title="SIGN UP TO NGIF">
+          <p>Not a USER? SIGN UP!</p>
+        </a> -->
+      </div>
